k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: bank-app
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend 
    spec:
      containers:
        - name: app-container
          image: muhammadabdullahabrar/devops:bank-app
          ports:
            - containerPort: 8080
